<resources>

    <string name="app_name">My mind</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="test">TEST</string>
    <string name="dark_theme">Темная тема</string>
    <string name="search">Поиск…</string>
    <string name="settings">Настройки</string>
    <string name="is_empty_favorites">Здесь пока пусто…</string>
    <string name="your_progress">Ваш общий прогресс</string>
    <string name="implement_data">Внедрить данные</string>
    <string name="bold_font">Жирный шрифт</string>
    <string name="not_finished_all">Чтобы активировать эту функцию, вы должны завершить все разделы</string>
    <string name="clear_all">Обнулить данные</string>
    <string name="restart_info">Требуеться перезапуск программы</string>
    <string name="motivation_txt">#Развивайся</string>
    <string name="ach_finished">Всего достижении были выполнены:</string>
    <string name="start">НАЧАТЬ</string>
    <string name="what_is_it">Внедрение данных из облака - при этом новые данные будут импортированы и внедрены в приложение. Это предзначен для пользовтелей которые хотят узнать большего</string>
    <string name="send">Отправить</string>

    <string name="success_send_check">"Успешно отправлено на проверку"</string>
    <string name="when_my_publish">Ваша публикация успешно отправлено на проверку, если ваша публикация успешно пройдет проверку, мы разрешим его для внедрение для других пользователей. Пожалуйста старайтесь писать коротко и ясно.</string>
    <string name="title">Заголовок</string>
    <string name="your_text">Ваша статья…</string>
    <string name="share_your_text">Поделитесь с другими что-то интересное</string>
    <string name="rate_us">Оценить приложение</string>
    <string name="dev_mode_enabled">Включен режим разработчика</string>
    <string name="no_connection">Нет подключения к интернету…</string>
    <string name="bad_connection">Плохое подключения к интернету…</string>
    <string name="connect_headphones">Подключите наушники для максимального погружения</string>
    <string name="have_good_day">Медитация окончено, желаю вас приятного дня.</string>
    <string name="exchange_coin">Обменить монеты</string>
    <string name="share">Поделиться</string>
    <string name="exchange">Обменить</string>
    <string name="error_network">Произошла ошибка соединения</string>
    <string name="handle_error">Произошла ошибка при показе рекламы</string>
    <string name="success_reward">Вы успешно получили Tcoin</string>
    <string name="ad_not_ready">Реклама еще не готова к показу</string>
    <string name="not_enough_money">У вас недостаточно монет</string>
    <string name="sum">Общая цена:</string>
    <string name="balance">Ваш баланс :</string>
    <string name="data_count">Количество статьей…</string>
    <string name="exchange_coin_to_data">Обменяйте монеты на новые статьи</string>
    <string name="click_and_wait">Просто нажмите на кнопку \nи подождите.</string>
    <string name="price_of_share">Цена отправки:</string>
    <string name="date">Дата создания</string>
    <string name="coin_count">Количество монет…</string>
    <string name="id">Идентификатор</string>
    <string name="active">Активировать</string>
    <string name="token_not_found">Данный токен не существует или повторите попытку</string>
    <string name="check">ПРОВЕРИТЬ</string>
    <string name="token_info">Токен нужен для создание чека для кого-либо, чтобы например ваш друг мог получить от вас монеты(Tcoin) для обмена на новые данные в приложении. Вы можете найти токены по id и потом активировать их. Но запомните токен будет удален после активации.</string>
    <string name="token_after_activation">Токен будет удален после активации</string>
    <string name="create">СОЗДАТЬ</string>
    <string name="id_token">Вставьте id</string>
    <string name="copy">Идентификатор скопировано в буфер обмена</string>
    <string name="headphones_connected">Наушники подключены, теперь давайте начнем медитировать...</string>
    <string name="headphones_disconnected">Наушники отключены...</string>
    <string name="get_coin">Получайте Tcoin</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="register">Регистрация</string>
    <string name="receiver">Получатель..</string>
    <string name="fund">Фонд</string>
</resources>