<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:backgroundTint="@color/myWhite"
    android:clickable="true"
    android:focusable="true"
    tools:context=".presentation.fragments.ShareFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guid1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="14dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintBottom_toTopOf="@+id/guid1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/titleEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:elevation="2dp"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:lines="1"
        android:maxLines="1"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.085"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guid1" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:elevation="4dp"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@+id/titleEditText" />

    <EditText
        android:id="@+id/bodyEditText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/edit_text_style"
        android:elevation="2dp"
        android:gravity="start|top"
        android:hint="@string/your_text"
        android:inputType="textMultiLine"
        android:padding="17dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendBtn"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/item_style"
        android:elevation="4dp"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="@+id/bodyEditText"
        app:layout_constraintTop_toBottomOf="@+id/bodyEditText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/share_your_text"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>