<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/containerMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context=".presentation.activity.MainActivity">

    <TextView
        android:id="@+id/tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="Войдите чтобы \nпродолжить"
        android:textColor="@color/to_right_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/loginEdt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/edit_text_style_2"
        android:elevation="4dp"
        android:hint="@string/login"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/paswordEdt"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="24dp"
        android:background="@drawable/edit_text_style_2"
        android:elevation="4dp"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/hint_color"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEdt"
        app:layout_constraintVertical_bias="0.085" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:background="@drawable/clear_item"
        android:text="Войти"
        app:layout_constraintTop_toBottomOf="@+id/paswordEdt" />

    <TextView
        android:id="@+id/tv2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/register"
        android:textColor="@color/to_right_color"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>