<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:orientation="vertical"
    tools:context=".presentation.activity.DataImportingActivity">

    <LinearLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myWhite"
        android:backgroundTint="@color/myWhite"
        android:clipChildren="false"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="4dp"
            android:text="Отправить монеты ! "
            android:textColor="@color/to_right_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="Обменяйтесь..."
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv"
            app:layout_constraintTop_toBottomOf="@+id/tv" />

        <EditText
            android:id="@+id/usernameEdt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:background="@drawable/edit_text_style_2"
            android:elevation="4dp"
            android:hint="@string/receiver"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <EditText
            android:id="@+id/countEdt"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/edit_text_style_2"
            android:elevation="4dp"
            android:hint="@string/coin_count"
            android:inputType="number"
            android:maxLength="6"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/sendBtn"
        android:layout_width="132dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="24dp"
        android:background="@drawable/clear_item"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3" />


    <ImageView
        android:id="@+id/backBtn"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="12dp"
        android:src="@drawable/ic_baseline_chevron_left_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/to_right_color" />


</androidx.constraintlayout.widget.ConstraintLayout>