<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/myWhite"
    android:orientation="vertical"
    tools:context=".presentation.activity.DataImportingActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/myWhite"
        android:backgroundTint="@color/myWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="24dp"
            android:text="Обменяйте монеты на новые статьи"
            android:textColor="@color/to_right_color"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv"
            android:layout_alignStart="@+id/tv"
            android:layout_alignEnd="@+id/tv"
            android:layout_marginStart="2dp"
            android:layout_marginTop="-20dp"
            android:text="Просто нажмите на кнопку и подождите."
            android:textColor="@color/to_right_color"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/tv"
            app:layout_constraintTop_toBottomOf="@+id/tv" />

        <ImageView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:src="@drawable/ic_baseline_help_outline_24"
            android:textColor="@color/to_right_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/info"
            android:layout_marginStart="8dp"
            android:layout_alignBottom="@+id/info"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/info"
            android:src="@drawable/ic_baseline_add_circle_outline_24"
            android:textColor="@color/to_right_color"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/exchange_room"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/share"
            android:layout_alignBottom="@+id/share"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/share"
            android:src="@drawable/ic_baseline_flip_camera_android_24"
            android:textColor="@color/to_right_color"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout3">


        <EditText
            android:id="@+id/editTextCount"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_margin="24dp"
            android:background="@drawable/edit_text_style_2"
            android:elevation="4dp"
            android:hint="@string/data_count"
            android:inputType="number"
            android:maxLength="5"
            android:maxLines="1"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:textColorHint="@color/hint_color"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.085" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progressView"
            style="@style/SpinKitView.Large.FadingCircle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:indeterminate="true"
            app:SpinKit_Color="@color/to_right_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/start"
            app:layout_constraintStart_toStartOf="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/start"
            app:layout_constraintVertical_bias="1.0" />


        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="24dp"
            android:background="@drawable/item_style"
            android:elevation="2dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/balanceLayout"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/priceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="24dp"
                android:text="0"
                android:textColor="@color/to_right_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/thumb_track" />

            <ImageView
                android:id="@+id/img2"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_coin" />

            <TextView
                android:id="@+id/sumTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/img2"
                android:text="@string/sum"
                android:textColor="@color/to_right_color"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/balanceLayout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_margin="24dp"
            android:background="@drawable/item_style"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextCount">

            <TextView
                android:id="@+id/balanceTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerInParent="true"
                android:layout_marginEnd="24dp"
                android:text="24"
                android:textColor="@color/to_right_color"
                android:textSize="18sp"
                android:textStyle="bold"
                android:thumb="@drawable/switch_thumb"
                app:track="@drawable/thumb_track" />

            <ImageView
                android:id="@+id/img"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentStart="true"
                android:layout_centerInParent="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="12dp"
                android:src="@drawable/ic_coin" />

            <TextView
                android:id="@+id/tokenValueTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="0dp"
                android:layout_toEndOf="@+id/img"
                android:text="@string/balance"
                android:textColor="@color/to_right_color"
                android:textSize="20sp" />

        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="24dp"
            android:background="@drawable/clear_item"
            android:text="@string/exchange"
            app:layout_constraintEnd_toEndOf="@+id/relativeLayout1"
            app:layout_constraintStart_toStartOf="@+id/relativeLayout1"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>